--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "portfolio-website",
   "version": "1.0.0",
-  "homepage": "https://csharikrishna.github.io/portfolio",
   "private": true,
+  "homepage": "https://csharikrishna.github.io/portfolio",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "@emailjs/browser": "^3.11.0",
     "react-icons": "^4.12.0"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,5 +20,17 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
