--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio-website",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://csharikrishna.github.io/portfolio",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -10,16 +9,11 @@
     "@emailjs/browser": "^3.11.0",
     "react-icons": "^4.12.0"
   },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
